<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#EBE9D7"
    android:orientation="vertical">

    <!--android:layout_marginTop="30dp"-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_home"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <!--android:layout_marginTop="30dp"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="#383743"
        android:gravity="center_horizontal"
        android:text="@string/app_welcome"
        android:layout_marginTop="30dp"
        />

    <!--android:layout_marginTop="30dp"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#383743"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="3.5sp"
        android:gravity="center_horizontal"
        android:text="@string/app_nameExample"
        android:layout_marginTop="30dp"
        />

    <!--android:layout_marginTop="30dp"-->
    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/app_email"
        android:drawingCacheQuality="low"
        android:id="@+id/emailInputEd"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        />

    <!--android:layout_marginTop="10dp"-->
    <EditText
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_cadeado"
        android:hint="@string/app_password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:id="@+id/passwordInputEd"
        android:layout_marginTop="10dp"
        />

    <!--android:layout_marginTop="30dp"-->

    <Button
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_style"
        android:text="@string/app_login"
        android:textColor="#fff"
        android:id="@+id/loginButtonBt"
        android:layout_marginTop="30dp"
        />

    <!--android:layout_marginTop="30dp"
<Button
    android:layout_width="270dp"
    android:layout_height="44dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/background_style"
    android:text="@string/app_login"
    android:textColor="#fff"
    android:id="@+id/loginButtonGet"
    android:layout_marginTop="30dp"
    />
    -->
</LinearLayout>